# MuPiHAT

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml
bq25795-web-server/: requirements.txt
src/: mupihat.py  mupihat.service  mupihat_bq25792.py  requirements.txt
src/templates/: index.html  mupihatconfig.json
